# wasm-runner

./: Cargo.toml
.cargo/: config
benches/: main_bench.rs
src/: main.rs
wasm/: fact_salsa20.wat  fact_tea.wat  sec_salsa20.wat  test.wat
